add to modifly contain

--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
             <img src="images/New Year Photo.png" alt="">
         </section>
         <section class="welcome-box inter">
-            <h1 class="title white">Welcome to </h1>
+            <div class="text-contain">
+                <h1 class="title white">Welcome to </h1>
             <h1 class="title-2 white">midnight party</h1>
             <p class="welcome-des white">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
             <button class="btn-paimary white">Join Now</button>
+            </div>
+            <div class="image-contain">
+                <img src="images/Group 70.png" alt="">
+            </div>
         </section>
         <section class="about inter">
             <h2 class="birth-of-place"><span class="red">Place:</span> New Park Hotel</h2>
